Fixed x-scaling jumping, made the plot coords movable. Adjusted point cloud scaling

--- a/src/components/PlotObjects/PlotArea/PlotArea.css
+++ b/src/components/PlotObjects/PlotArea/PlotArea.css
@@ -1,9 +1,13 @@
 .plot-coords{
-    position: relative;
-    width: 200px;
+    position: absolute;
+    max-width:150px;
     bottom:50%;
     left:2%;
-    pointer-events: none;
+    padding: 5px 5px;
+    background-color: rgba(0, 0, 0, 0.445);
+    box-shadow: 0px 0px 4px white;
+    cursor: move;
+    user-select: none;
 }
 
 .point-info{
